[package]
name = "rusty-react"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"

[dependencies.web-sys]
version = "0.3.77" # Use a recent version
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Text',
  'Window',
]
